dfir_rs/tests/compile-fail/surface_forwardref_self3.rs
use dfir_rs::dfir_syntax;

fn main() {
    let mut df = dfir_syntax! {
        f = f;
        f -> for_each(std::mem::drop);
    };
    df.run_available();
}
